# metal-sdl

./: CMakeLists.txt  README.md  configure-xcode.sh  configure.sh  main.cpp  superbuild.cmake  vertex.h
imgui/: README.md  imgui_impl_metal.h
